Fixed bugs * Resume link no longer private * Added max-width to project cards for mobile-tablet styling * Enlarged gallery buttons * Left/Right arrow buttons disappear when not needed * Fixed modal header font on mobile

--- a/src/about-me/about-me-res.css
+++ b/src/about-me/about-me-res.css
@@ -2,7 +2,6 @@
   /* Styling for About Me */
   #about {
     width: 80%;
-    max-width: 697px;
   }
 
   /* Styling for About Me header */
