--- a/src/projects/image-slider.css
+++ b/src/projects/image-slider.css
@@ -33,8 +33,8 @@
 
 /* Styling for arrow buttons */
 .arrow-button {
-  width: 40px;
-  height: 40px;
+  width: 45px;
+  height: 45px;
   display: block;
   position: absolute;
   top: 43%;
@@ -56,15 +56,15 @@
 
   /* Styling for arrow buttons */
   .arrow-button {
-    width: 46px;
-    height: 46px;
+    width: 51px;
+    height: 51px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   /* Styling for arrow buttons */
   .arrow-button {
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
   }
 }
