--- a/src/projects/project-modal.css
+++ b/src/projects/project-modal.css
@@ -44,7 +44,7 @@
 
 /* Styling for modal project title */
 .modal-header span {
-  font-size: 35px;
+  font-size: 30px;
   margin-left: 2px;
 }
 
