--- a/src/projects/projects.css
+++ b/src/projects/projects.css
@@ -1,6 +1,7 @@
 /* Styling for Projects container */
 #projects {
   width: 85%;
+  max-width: 382px;
   display: flex;
   flex-direction: column;
   justify-content: center;
